fin_cander/kube_files/fin-cander-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fin-cander-kub
  labels:
    app: finc-cander-kub
    group: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fin-cander-kub
  template:
    metadata:
      labels:
        app: fin-cander-kub
        group: db
    spec:
      containers:
        - name: fin-cander-kub
          image: docker.io/library/finc_cander_image_for_kub_11:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
