fin_cander/kube_files/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-container
  template:
    metadata:
      labels:
        app: mongodb-container
        tier: backend
    spec:
      containers:
        - name: mongodb-container
          image: mongo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-volume-mount
              mountPath: /var/lib/mongodb/data
      volumes:
        - name: mongodb-volume-mount
          persistentVolumeClaim:
            claimName: mongodb-pvc
