fin_cander/kube_files/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-deployment
  template:
    metadata:
      labels:
        app: postgres-deployment
        tier: backend
    spec:
      containers:
        - name: postgres-container
          image: postgres:16-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-volume-mount-v2
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-volume-mount-v2
          persistentVolumeClaim:
            claimName: postgres-pv-newclaim-v2
