fin_cander/kube_files/fin-cander-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fin-cander-kub
  labels:
    group: db
spec:
  type: ClusterIP
  selector:
    app: fin-cander-kub
  ports:
    - port: 8000
      targetPort: 8000
