fin_cander/kube_files/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb-container
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
