fin_cander/kube_files/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service # Sets service name
spec:
  selector:
    app: postgres-container
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
